fix wrap

--- a/Frontend/EcoLife/src/app/components/shared/items-list/items-list.component.scss
+++ b/Frontend/EcoLife/src/app/components/shared/items-list/items-list.component.scss
@@ -54,6 +54,7 @@
       &__description {
         margin-bottom: 5px;
         text-align: justify;
+        word-wrap: break-word;
       }
 
       &__date {
